--- a/test_crawler.html
+++ b/test_crawler.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <script type="text/javascript" src="jQuery/jquery-2.2.3.min.js"></script>
     <script type="text/javascript">
       var keys = ['archer c9'];
