--- a/test_crawler.html
+++ b/test_crawler.html
@@ -17,7 +17,7 @@ Number.prototype.format = function(n, x) {
 			'ARCHER C5400', 'R8500', 'ARCHER C3150', 'RT-AC88U', 'WXR-2533DHP2', 
 			'WG2600HP2', 'WRC-2533GHBK-I', 'WRC-2533GHBK2-T', 'ARCHER C9', 'WXR-1900DHP2', 
 			'WXR-1901DHP3', 'RT-AC68U', 'WRC-1900GHBK-S', 'ARCHER C7', 'WXR-1750DHP', 'WXR-1750DHP/Y',
-			'WG1800DP2', 'ARCHER C1200', 'WG1200HS', 'WRC-1167GHBK-S', 'WN-AX1167GR', 
+			'WG1800HP2', 'ARCHER C1200', 'WG1200HS', 'WRC-1167GHBK-S', 'WN-AX1167GR', 
 			'ARCHER C55', 'WHR-1166DHP3', 'TL-WR802N', 'WMR-433W-BK', 'PA-WF300HP2', 
 			'WRH-300Xx3-S', 'WN-AC583TRK', 'RE450', 'RE305', 'WEX-1166DHP', 
 			'WN-AC1167EXP', 'WTC-1167HWH-D', 'WTC-1167HWH', 'RE200', 'WEX-733DHP', 
