--- a/test_crawler.html
+++ b/test_crawler.html
@@ -41,7 +41,7 @@ Number.prototype.format = function(n, x) {
 		var priceSelectors = [
 			'span.s-price',
 			'ul li:eq(0) .red,ul li:eq(0) .gray',
-			'p.bic_price+p:nth-child(5)',
+			'p.bic_price',
 			'div.normal-price span,div.tokka-price span'
 		];
 
