--- a/TODO/urls.html
+++ b/TODO/urls.html
@@ -135,6 +135,7 @@
       <a href="http://www.fileformat.info/mirror/egff/ch09_03.htm">Run-length Encoding</a>
       <a href="http://queue.acm.org/detail.cfm?id=1563874">The Pathologies of Big Data</a>
       <a href="http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.44.2782&rep=rep1&type=pdf">LSM</a>
+      <a href="https://dzone.com/articles/confused-about-mapreduce?utm_source=tuicool&utm_medium=referral">Map Reduce</a>
       
       <a href="http://blog.csdn.net/qiurisuixiang/article/details/7674463">算法分析与注册机编写</a>
       <a href="http://news.sina.com.cn/c/2015-06-24/032031980713.shtml">学了一招系统漏洞破解法以为可以“靠技术吃饭”了</a>
