--- a/projects/words_list.html
+++ b/projects/words_list.html
@@ -30,7 +30,9 @@
 </head>
 <body>
   <div id="container">
-    <table id="words_table"></table>
+    <table id="words_table">
+      <thead><tr><th>en</th><th>cn</th><th>ex</th></tr></thead>
+    </table>
   </div>
 </body>
 </html>
