--- a/test_crawler2.html
+++ b/test_crawler2.html
@@ -19,7 +19,7 @@ Number.prototype.format = function(n, x) {
 			'WXR-1901DHP3', 'RT-AC68U', 'WRC-1900GHBK-S', 'ARCHER C7', 'WXR-1750DHP', 'WXR-1750DHP/Y',
 			'WG1800HP2', 'ARCHER C1200', 'WG1200HS', 'WRC-1167GHBK-S', 'WN-AX1167GR', 
 			'ARCHER C55', 'WHR-1166DHP3', 'TL-WR802N', 'WMR-433W-BK', 'PA-WF300HP2', 
-			'WRH-300Xx3-S', 'WN-AC583TRK', 'RE450', 'RE305', 'WEX-1166DHP', 
+			'WN-AC583TRK', 'RE450', 'RE305', 'WEX-1166DHP', 
 			'WN-AC1167EXP', 'WTC-1167HWH-D', 'WTC-1167HWH', 'RE200', 'WEX-733DHP', 
 			'WEX-733D', 'EX6100-100JPS', 'TL-WA850RE', 'WEX-G300', 'WN-G300EXP', 
 			'WTC-300HWH', 'ARCHER T4UH', 'ARCHER T4U', 'WI-U3-866D', 'WDC-867SU3SBK', 
