--- a/test_crawler2.html
+++ b/test_crawler2.html
@@ -13,7 +13,7 @@ Number.prototype.format = function(n, x) {
     return this.toFixed(Math.max(0, ~~n)).replace(new RegExp(re, 'g'), '$&,');
 };
 	$(function() {
-		var keys = [
+		var keys = ['WXR-1751DHP2', 'WRC-1166DHP4'
 			'ARCHER C5400', 'R8500', 'ARCHER C3150', 'RT-AC88U', 'WXR-2533DHP2', 
 			'WG2600HP2', 'WRC-2533GHBK-I', 'WRC-2533GHBK2-T', 'ARCHER C9', 'WXR-1900DHP2', 
 			'WXR-1901DHP3', 'RT-AC68U', 'WRC-1900GHBK-S', 'ARCHER C7', 'WXR-1750DHP', 'WXR-1750DHP/Y',
