Fix yodobashi selector

--- a/test_crawler2.html
+++ b/test_crawler2.html
@@ -42,7 +42,7 @@ Number.prototype.format = function(n, x) {
 		
 		var priceSelectors = [
 			'span.s-price',
-			'ul li:eq(0) .red,ul li:eq(0) .gray',
+			'ul li:eq(0) span.productPrice',
 			'p.bic_price',
 			'div.normal-price span,div.tokka-price span'
 		];
