Fix game ending

--- a/test/link_game.html
+++ b/test/link_game.html
@@ -350,7 +350,7 @@
 				$checkedBoxes.removeClass(typeClasses);
 				
 				if (!searchLinkable()) {
-					alert('Happy children\'s day! ←_←');
+					alert('Happy the day after children\'s day! ←_←');
 				}
 			}
 			
