--- a/test_crawler2.html
+++ b/test_crawler2.html
@@ -29,21 +29,21 @@ Number.prototype.format = function(n, x) {
 		
 		var urls = [
 			'https://www.amazon.co.jp/s/ref=nb_sb_noss?url=search-alias%3Dcomputers&field-keywords=%s',
-			'http://www.yodobashi.com/ec/category/index.html?cate=19531_500000000000000201&word=%s',
+			'http://www.yodobashi.com/category/19531/19532/?word=%s',
 			'http://www.biccamera.com/bc/disp/CSfDispListPage_001.jsp?dispNo=001100&q=%s',
 			'https://www.sofmap.com/search_result.aspx?mode=SEARCH&product_type=NEW&gid=PL00000000&keyword=%s'
 		];
 		var selectors = [
 			'div#atfResults div.s-item-container>div.a-row:nth-child(4) i.a-icon-prime-jp',
 			'div.pInfo',
-			'div.prod_box_inner',
+			'div.prod_box p.bcs_price',
 			'div.search-img-textbox'
 		];
 		
 		var priceSelectors = [
 			'span.s-price',
 			'ul li:eq(0) span.productPrice',
-			'p.bic_price',
+			'span.val',
 			'div.normal-price span,div.tokka-price span'
 		];
 
