--- a/test_crawler2.html
+++ b/test_crawler2.html
@@ -36,14 +36,14 @@ Number.prototype.format = function(n, x) {
 		var selectors = [
 			'div#atfResults div.s-item-container>div.a-row:nth-child(4) i.a-icon-prime-jp',
 			'div.pInfo',
-			'li.prod_box>p.bcs_title',
+			'li.prod_box>p.bcs_price',
 			'div.search-img-textbox'
 		];
 		
 		var priceSelectors = [
 			'span.s-price',
 			'ul li:eq(0) span.productPrice',
-			'p.bcs_price span.val',
+			'span.val',
 			'div.normal-price span,div.tokka-price span'
 		];
 
