--- a/TODO/urls.html
+++ b/TODO/urls.html
@@ -127,6 +127,9 @@
       <a href="https://codeplanet.io/principles-good-restful-api-design/">principles-good-restful-api-design</a>
       <a href="http://howtodoinjava.com/best-practices/how-you-should-unit-test-dao-layer/">how-you-should-unit-test-dao-layer</a>
       <a href="https://dzone.com/articles/store-uuid-optimized-way">store-uuid-optimized-way</a>
+      <a href="http://www.ityouknow.com/spring-boot">Spring boot 学习资料</a>
+      <a href="https://github.com/superalsrk/cn.stackbox.archetypes">Spring boot archetypes</a>
+      <a href="https://github.com/superalsrk/springboot-practice">Spring boot practice</a>
     </section>
     <section>
       <h3>Docker & k8s</h3>
